--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 <div class="text-bg-info p-3 mt-4 col-md-12" style="height: 150;">
-  <h1 style="text-align: center;">EmoReg: Directional Latent Vector Modeling for Emotional Intensity Regularization in Diffusion-based Voice Conversion</h1>
+  <h1 style="text-align: center;">EmoPrompt TTS: Mixture of Cross-Modal Prompts for LLM-based Emotional Voice Synthesis</h1>
 </div>
 
 <div class="mt-4 col-md-12" style="text-align: center;" >
@@ -15,21 +15,32 @@
               margin-left: auto;
               margin-right: auto;
               width: 70%;"
-        src="./block_diagram.png"
-        alt="Proposed EmoReg with Directional Vector Modelling-based Approach Architecture">
-    <figcaption>Figure 1. Block diagram of the proposed DVM-based Emotion Intensity Regularized EVC architecture. </figcaption>
+        src="./block_diag_f2.png"
+        alt="Proposed EmoPrompt TTS">
+    <figcaption>Figure 1. Block diagram of the proposed EmoPrompt TTS. </figcaption>
 </figure>
 </div>
 
 
-<h2 style="text-decoration: underline;">Detailed Rebuttal is Available <a href="https://anonymous.4open.science/api/repo/EmoReg-286F/file/AAAI_EmoReg_Rebuttal_v3.pdf?v=d1d0fdf7">Here</a></h2>
+<div class="mt-4 col-md-12" style="text-align: center;" >
+  <figure>
+    <img 
+        style="display: block; 
+              margin-left: auto;
+              margin-right: auto;
+              width: 70%;"
+        src="./SA_conv_2.png"
+        alt="Proposed EmoPrompt TTS">
+    <figcaption>Figure 1. Block diagram of the proposed EmoPrompt TTS. </figcaption>
+</figure>
+</div>
 
 <h2 style="text-decoration: underline;">English Demo Samples for Different Emotional Intensity Values</h2>
 <h5>(A): Emotion Direction: Neutral-to-Angry <h5>
 
 		<table class="table">
             <tbody><tr>
-				<th style="text-align:center;"> Method</th>
+		<th style="text-align:center;"> Method</th>
                 <th style="text-align:center;"> I=0</th>
                 <th style="text-align:center;"> I=0.2</th>
                 <th style="text-align:center;"> I=0.4</th>
