--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               width: 70%;"
         src="./SA_conv_2.png"
         alt="Proposed EmoPrompt TTS">
-    <figcaption>Figure 1. Block diagram of the proposed EmoPrompt TTS. </figcaption>
+    <figcaption>Figure 2. Block diagram of the Style Adaptive Fusion Network. </figcaption>
 </figure>
 </div>
 
