--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 <h5>(A): We have considered reference samples from three different emotions <h5>
 
 		<table class="table">
-            <tbody><tr>
-		<th style="text-align:center;"> Input Text</th>
-                <th style="text-align:center;"> Reference Audio</th>
-                <th style="text-align:center;"> Multi Modal TTS</th>
-                <th style="text-align:center;"> EmoPrompt TTS</th>
+	    <tbody><tr>
+	        <th width="40%"> Text</th>
+                <th width="20%" > Reference </th>
+                <th width="20%"> Multimodal MMTTS</th>
+                <th width="20%"> Proposed EmoPrompt TTS</th>
             </tr>
             <tr>
 		<td style="width:200px"> Proposed EmoReg</td>
