--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <th width="20%"> Proposed EmoPrompt TTS</th>
             </tr>
             <tr>
-		<td style="width:200px"> Proposed EmoReg</td>
+		<td style="width:200px"> He protected her, and she strengthened him. </td>
                 <td>
                     <audio controls style="width: 180px; height: 50px">
                     <source src=".\Demo\P1_Eng_Ang_0_0_S1.wav" type="audio/wav">
