--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<table class="table">
 	    <tbody><tr>
 	        <th width="40%"> Text</th>
-                <th width="20%" > Reference </th>
+                <th width="20%" > Audio Prompt </th>
                 <th width="20%"> Multimodal MMTTS</th>
                 <th width="20%"> Proposed EmoPrompt TTS</th>
             </tr>
