--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
 		<td style="width:250px"> He protected her, and she strengthened him. </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Demo\P1_Eng_Ang_0_0_S1.wav" type="audio/wav">
+                    <source src=".\Demo\Ref_1.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Demo\P1_Eng_Ang_0_2_S1.wav" type="audio/wav">
+                    <source src=".\Demo\MMTTS_1.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Demo\P1_Eng_Ang_0_4_S1.wav" type="audio/wav">
+                    <source src=".\Demo\EmoPrompt_1.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
