--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 		<td style="width:250px"> In many of his poems death comes by train a strongly evocative visual image.
  </td>
                <td style="width:250px">
-      <img src=".\Data\Ref_4.png" alt="A woman speaking sadly" width="100" height="100">
+      <img src=".\Data\Ref_4.png" width="100" height="100">
     </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
@@ -220,7 +220,7 @@
 		    <tr>
 		<td style="width:250px"> She had your dark suit in greasy wash water all year. </td>
                 <td style="width:250px">
-      <img src=".\Data\Ref_5.png" alt="A woman speaking sadly" width="100" height="100">
+      <img src=".\Data\Ref_5.png" width="100" height="100">
     </td>               
 	         <td>
                     <audio controls style="width: 400px; height: 50px">
@@ -240,7 +240,7 @@
 		    <tr>
 		<td style="width:250px"> Will you tell me why ? </td>
                 <td style="width:250px">
-      <img src=".\Data\Ref_6.png" alt="A woman speaking sadly" width="100" height="100">
+      <img src=".\Data\Ref_6.png" width="100" height="100">
     </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
