--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 		<td style="width:250px"> In many of his poems death comes by train a strongly evocative visual image.
  </td>
                <td style="width:250px">
-      <img src=".\Data\Ref_4.png" width="100" height="100">
+      <img src=".\Data\ref_4.png" width="100" height="100">
     </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
