--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 <div class="text-bg-info p-3 mt-4 col-md-12" style="height: 150;">
-  <h1 style="text-align: center;">EmoPrompt TTS: Mixture of Cross-Modal Prompts for LLM-based Emotional Voice Synthesis</h1>
+  <h1 style="text-align: center;">EmoFlux TTS: A Unified Framework for Emotional Voice Synthesis Using Cross-Modal Prompts and Flow Matching Diffusion Transformers</h1>
 </div>
 
 <div class="mt-4 col-md-12" style="text-align: center;" >
@@ -16,8 +16,8 @@
               margin-right: auto;
               width: 70%;"
         src="./block_diag_f2.png"
-        alt="Proposed EmoPrompt TTS">
-    <figcaption>Figure 1. Block diagram of the proposed EmoPrompt TTS. </figcaption>
+        alt="Proposed EmoFlux TTS">
+    <figcaption>Figure 1. Block diagram of the proposed EmoFlux TTS. </figcaption>
 </figure>
 </div>
 
@@ -30,7 +30,7 @@
               margin-right: auto;
               width: 70%;"
         src="./SA_conv_2.png"
-        alt="Proposed EmoPrompt TTS">
+        alt="Proposed EmoFlux TTS">
     <figcaption>Figure 2. Block diagram of the Style Adaptive Fusion Network. </figcaption>
 </figure>
 </div>
@@ -43,7 +43,7 @@
 	        <th width="40%"> Text</th>
                 <th width="20%" > Audio Prompt </th>
                 <th width="20%"> Multimodal MMTTS</th>
-                <th width="20%"> Proposed EmoPrompt TTS</th>
+                <th width="20%"> Proposed EmoFlux TTS</th>
             </tr>
             <tr>
 		<td style="width:250px"> He protected her, and she strengthened him. </td>
@@ -61,7 +61,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoPrompt_1.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_1.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -84,7 +84,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoPrompt_2.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_2.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -107,7 +107,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoPrompt_3.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_3.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -126,7 +126,7 @@
 	        <th width="40%"> Text</th>
                 <th width="20%" > Text Prompt </th>
                 <th width="20%"> Multimodal MMTTS</th>
-                <th width="20%"> Proposed EmoPrompt TTS</th>
+                <th width="20%"> Proposed EmoFlux TTS</th>
             </tr>
             <tr>
 		<td style="width:250px"> Its yellow bristles, rather a mane than a head of hair, covered and concealed a lofty brow, evidently made to contain thought.
@@ -140,7 +140,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoPrompt_7.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_7.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -158,7 +158,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoPrompt_8.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_8.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -176,7 +176,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoPrompt_9.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_9.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -195,7 +195,7 @@
 	        <th width="40%"> Text</th>
                 <th width="20%" > Visual Prompt </th>
                 <th width="20%"> Multimodal MMTTS</th>
-                <th width="20%"> Proposed EmoPrompt TTS</th>
+                <th width="20%"> Proposed EmoFlux TTS</th>
             </tr>
             <tr>
 		<td style="width:250px"> In many of his poems death comes by train a strongly evocative visual image.
@@ -211,7 +211,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoPrompt_4.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_4.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -230,7 +230,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoPrompt_5.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_5.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -250,7 +250,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoPrompt_6.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_6.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
