--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               margin-left: auto;
               margin-right: auto;
               width: 70%;"
-        src="./block_diag_f2.png"
+        src="./block_diag3_DiT.png"
         alt="Proposed EmoFlux TTS">
     <figcaption>Figure 1. Block diagram of the proposed EmoFlux TTS. </figcaption>
 </figure>
