--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlux_1.wav" type="audio/wav">
+                    <source src=".\Data\EmoPrompt1.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -84,7 +84,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlux_2.wav" type="audio/wav">
+                    <source src=".\Data\EmoPrompt2.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -107,7 +107,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlux_3.wav" type="audio/wav">
+                    <source src=".\Data\EmoPrompt3.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -140,7 +140,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlux_7.wav" type="audio/wav">
+                    <source src=".\Data\EmoPrompt7.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -158,7 +158,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlux_8.wav" type="audio/wav">
+                    <source src=".\Data\EmoPrompt8.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -176,7 +176,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlux_9.wav" type="audio/wav">
+                    <source src=".\Data\EmoPrompt9.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -211,7 +211,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlux_4.wav" type="audio/wav">
+                    <source src=".\Data\EmoPrompt4.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -230,7 +230,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlux_5.wav" type="audio/wav">
+                    <source src=".\Data\EmoPrompt5.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -250,7 +250,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlux_6.wav" type="audio/wav">
+                    <source src=".\Data\EmoPrompt6.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
