--- a/index.html
+++ b/index.html
@@ -36,90 +36,6 @@
 </div>
 
 
-<h2 style="text-decoration: underline;">Demo samples on RAVDEES Dataset</h2>
-
-<table  class="table">
-  <tr>
-    <th width="40%">Text</th>
-    <th width="20%">Visual Prompt</th>
-    <th width="10%">Audio Prompt</th>
-    <th width="10%">EmoFlux TTS</th>
-    <th width="10%">Ablation 1</th>
-    <th width="10%">Ablation 2</th>
-    <th width="10%">Ablation 3</th>
-    <th width="10%">F5-TTS</th>
-    <th width="10%">CozyVoice</th>
-    <th width="10%">MaskGCT</th>
-  </tr>
-
-  <tr>
-    <td style="width:250px">"Obviously the bridal pair has many adjustments to make to their new situation."</td>
-    <td><img width="100" height="100" src=".\Data\RAVEDEES_Angry.png" alt="Gesture Visual"></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Ref_Angry_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Pr_Angry_RAVEDESS.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A1_Angry_RAVEDESS.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A2_Angry_RAVEDESS.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A3_Angry_RAVEDESS.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\F5_Angry_RAVEDESS.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Cz_Angry_RAVEDESS.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Mg_Angry_RAVEDESS.wav"></audio></td>
-  </tr>
-
-
-   <tr>
-    <td style="width:250px">"Why do we need bigger and better bombs?"</td>
-    <td><img width="100" height="100" src=".\Data\RAVEDEES_Sad.png" alt="Gesture Visual"></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Ref_Sad_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Pr_Sad_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A1_Sad_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A2_Sad_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A3_Sad_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\F5_Sad_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Cz_Sad_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Mg_Sad_RAVEDEES.wav"></audio></td>
-  </tr>
-
-  <tr>
-    <td style="width:250px">"Who authorized the unlimited expense account."</td>
-    <td><img width="100" height="100" src=".\Data\RAVEDEES_Happy.png" alt="Gesture Visual"></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Ref_Happy_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Pr_Happy_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A1_Happy_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A2_Happy_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A3_Happy_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\F5_Happy_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Cz_Happy_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Mg_Happy_RAVEDEES.wav"></audio></td>
-  </tr>
-
-  <tr>
-    <td style="width:250px">"Who authorized the unlimited expense account?"</td>
-    <td><img width="100" height="100" src=".\Data\RAVEDEES_Surprise.png" alt="Gesture Visual"></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Ref_Surprise_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Pr_Surprise_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A1_Surprise_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A2_Surprise_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A3_Surprise_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\F5_Surprise_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Cz_Surprise_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Mg_Surprise_RAVEDEES.wav"></audio></td>
-  </tr>
-
-  <tr>
-    <td style="width:250px">"One looked down on a sea of leaves a breaking wave of flower."</td>
-    <td><img width="100" height="100" src=".\Data\RAVEDEES_Fear.png" alt="Gesture Visual"></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Ref_Fear_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Pr_Fear_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A1_Fear_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A2_Fear_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A3_Fear_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\F5_Fear_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Cz_Fear_RAVEDEES.wav"></audio></td>
-    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Mg_Fear_RAVEDEES.wav"></audio></td>
-  </tr>
-
-  <!-- Add more <tr> rows as needed -->
-</table>
 
 <h2 style="text-decoration: underline;">Demo samples on MEAD Dataset: SOTA Benchmarking</h2>
 <h5> Input Text: The curious travelers ventured deep into the forest, hoping to uncover the secrets hidden within its ancient trees. </h5>
@@ -193,6 +109,92 @@
 
   <!-- Add more <tr> rows as needed -->
 </table>
+
+<h2 style="text-decoration: underline;">Demo samples on RAVDEES Dataset</h2>
+
+<table  class="table">
+  <tr>
+    <th width="40%">Text</th>
+    <th width="20%">Visual Prompt</th>
+    <th width="10%">Audio Prompt</th>
+    <th width="10%">EmoFlux TTS</th>
+    <th width="10%">Ablation 1</th>
+    <th width="10%">Ablation 2</th>
+    <th width="10%">Ablation 3</th>
+    <th width="10%">F5-TTS</th>
+    <th width="10%">CozyVoice</th>
+    <th width="10%">MaskGCT</th>
+  </tr>
+
+  <tr>
+    <td style="width:250px">"Obviously the bridal pair has many adjustments to make to their new situation."</td>
+    <td><img width="100" height="100" src=".\Data\RAVEDEES_Angry.png" alt="Gesture Visual"></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Ref_Angry_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Pr_Angry_RAVEDESS.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A1_Angry_RAVEDESS.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A2_Angry_RAVEDESS.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A3_Angry_RAVEDESS.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\F5_Angry_RAVEDESS.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Cz_Angry_RAVEDESS.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Mg_Angry_RAVEDESS.wav"></audio></td>
+  </tr>
+
+
+   <tr>
+    <td style="width:250px">"Why do we need bigger and better bombs?"</td>
+    <td><img width="100" height="100" src=".\Data\RAVEDEES_Sad.png" alt="Gesture Visual"></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Ref_Sad_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Pr_Sad_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A1_Sad_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A2_Sad_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A3_Sad_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\F5_Sad_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Cz_Sad_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Mg_Sad_RAVEDEES.wav"></audio></td>
+  </tr>
+
+  <tr>
+    <td style="width:250px">"Who authorized the unlimited expense account."</td>
+    <td><img width="100" height="100" src=".\Data\RAVEDEES_Happy.png" alt="Gesture Visual"></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Ref_Happy_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Pr_Happy_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A1_Happy_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A2_Happy_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A3_Happy_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\F5_Happy_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Cz_Happy_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Mg_Happy_RAVEDEES.wav"></audio></td>
+  </tr>
+
+  <tr>
+    <td style="width:250px">"One even gave my little dog a biscuit."</td>
+    <td><img width="100" height="100" src=".\Data\RAVEDEES_Surprise.png" alt="Gesture Visual"></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Ref_Surprise_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Pr_Surprise_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A1_Surprise_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A2_Surprise_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A3_Surprise_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\F5_Surprise_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Cz_Surprise_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Mg_Surprise_RAVEDEES.wav"></audio></td>
+  </tr>
+
+  <tr>
+    <td style="width:250px">"One looked down on a sea of leaves a breaking wave of flower."</td>
+    <td><img width="100" height="100" src=".\Data\RAVEDEES_Fear.png" alt="Gesture Visual"></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Ref_Fear_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Pr_Fear_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A1_Fear_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A2_Fear_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\A3_Fear_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\F5_Fear_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Cz_Fear_RAVEDEES.wav"></audio></td>
+    <td><audio controls style="width: 150px; height: 50px" src=".\Data\Mg_Fear_RAVEDEES.wav"></audio></td>
+  </tr>
+
+  <!-- Add more <tr> rows as needed -->
+</table>
+
 
 
 <h2 style="text-decoration: underline;">Demo samples using different audio-based prompts</h2>
