--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlow_1.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_1.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -246,7 +246,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlow_2.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_2.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -269,7 +269,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlow_3.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_3.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -302,7 +302,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlow_4.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_4.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -320,7 +320,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlow_5.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_5.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -338,7 +338,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlow_6.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_6.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -373,7 +373,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlow_7.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_7.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -392,7 +392,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlow_8.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_8.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -412,7 +412,7 @@
                 </td>
                 <td>
                     <audio controls style="width: 400px; height: 50px">
-                    <source src=".\Data\EmoFlow_9.wav" type="audio/wav">
+                    <source src=".\Data\EmoFlux_9.wav" type="audio/wav">
                     Your browser does not support the audio element.
                     </audio>
                 </td>
