--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               margin-left: auto;
               margin-right: auto;
               width: 70%;"
-        src="./block_diag3_DiT.png"
+        src="./Main_Blk_diag.png"
         alt="Proposed EmoFlow TTS">
     <figcaption>Figure 1. Block diagram of the proposed EmoFlow TTS. </figcaption>
 </figure>
